Added JSON parsing. I'm not sure how extensively this will be used.

--- a/src/main/webapps/opendct/css/opendct.css
+++ b/src/main/webapps/opendct/css/opendct.css
@@ -42,6 +42,11 @@ table {
 /* ---------------------------------------------------- */
 /* Loaded Capture Devices */
 
+div.notification {
+    text-align: center;
+    font-style: italic;
+}
+
 div.content {
 
 }
