--- a/src/main/webapps/opendct/css/opendct.css
+++ b/src/main/webapps/opendct/css/opendct.css
@@ -1,69 +1,8 @@
-/*
-I borrowed some of this from the original SageTV web interface since it will be very familiar. I
-could not find the source and I have no idea who to attribute this to.
-*/
-
-/* ---------------------------------------------------- */
-/* Global settings */
+/* Move down content because we have a fixed navbar that is 50px tall */
 body {
-	font-family:  Arial, Tahoma, "lucida console", sans-serif;
-	font-size: 10pt;
-	background-color: #333;
-	color:#FFFFFF;
+  padding-top: 50px;
 }
 
-img {
-	border-style: none;
-}
-
-a {
-	color: #FFFFFF;
-	text-decoration:none;
-}
-
-a:visited {
-	color: #FFFFFF;
-	text-decoration:none;
-}
-
-a:hover {
-	color: #ffd800;
-	text-decoration:underline;
-}
-
-h1 {
-	text-align: center;
-}
-
-table {
-    width: 100%
-}
-
-/* ---------------------------------------------------- */
-/* Loaded Capture Devices */
-
-div.notification {
-    text-align: center;
-    font-style: italic;
-}
-
-div.content {
-
-}
-
-table.loaded_device {
-    border-radius: 10px;
-    border: 2px solid #FFFFFF
-}
-
-td.pool_cell {
-    width: 100px
-}
-
-td.details_cell {
-    width: 350px
-}
-
-td.checkbox {
-    width: 20px
+.content-page {
+    display: none;
 }
