--- a/src/main/webapps/opendct/css/opendct.css
+++ b/src/main/webapps/opendct/css/opendct.css
@@ -2,9 +2,13 @@
 body {
     padding-top: 75px;
     background-color: #333;
+}
+
+h1 {
     color: #FFFFFF;
 }
 
+/* Some content needs to be hidden before anything or the page will look incorrect */
 .content-page {
     display: none;
 }
@@ -26,7 +30,7 @@ a:hover {
 }
 
 a:focus {
-	color: #FFFFFF;
+	color: #ffd800;
 	text-decoration:none;
 }
 
@@ -54,4 +58,9 @@ table.table thead tr th {
 table.table tfoot tr th {
     background-color: #333;
 	color: #FFFFFF;
+}
+
+/* Form formatting */
+input.manage-merit-value {
+    min-width: 30px;
 }
