Red problem highlighting so it's obvious what's wrong if changes can't be applied.

--- a/src/main/webapps/opendct/css/opendct.css
+++ b/src/main/webapps/opendct/css/opendct.css
@@ -13,6 +13,10 @@ h1 {
     display: none;
 }
 
+.background-error {
+    background-color: #d9534f !important;
+}
+
 /* Global defaults to match the SageTV web interface. */
 a {
 	color: #FFFFFF;
