Added automatic capture device name enumeration for mass renaming.

--- a/src/main/webapps/opendct/css/opendct.css
+++ b/src/main/webapps/opendct/css/opendct.css
@@ -65,7 +65,7 @@ table.table tfoot tr th {
 }
 
 /* Form formatting */
-.centerBlock {
+.centerCell {
     display: table !important;
     margin: 0 auto !important;
 }
