--- a/src/main/webapp/opendct/css/opendct.css
+++ b/src/main/webapp/opendct/css/opendct.css
@@ -10,6 +10,11 @@ body {
     display: none;
 }
 
+
+.text-conflict {
+    color: #ffff00 !important;
+}
+
 .background-error {
     background-color: #d9534f !important;
 }
