--- a/scripts/wix/Product.wxs
+++ b/scripts/wix/Product.wxs
@@ -249,6 +249,20 @@
 							</Shortcut>
 						</File>
 					</Component>
+					<Directory Id="CommonAppDataFolderConfigTranscode" Name="transcode">
+                        <Component Id="profileExample.properties" Guid="{0acc4829-4194-4aa4-acde-4afb5da49300}" NeverOverwrite="no" Permanent="no">
+                            <File Source="$(var.configSourcePath)\transcode\profile_example.properties" Id="profileExample.properties" KeyPath="yes" Vital="yes" />
+                        </Component>
+                        <Component Id="ultraFast720p.properties" Guid="{0acc4829-4194-4aa4-acde-4afb5da49301}" NeverOverwrite="no" Permanent="no">
+                            <File Source="$(var.configSourcePath)\transcode\ultraFast720p.properties" Id="ultraFast720p.properties" KeyPath="yes" Vital="yes" />
+                        </Component>
+                        <Component Id="ultraFast720p30fps.properties" Guid="{0acc4829-4194-4aa4-acde-4afb5da49302}" NeverOverwrite="no" Permanent="no">
+                            <File Source="$(var.configSourcePath)\transcode\ultraFast720p30fps.properties" Id="ultraFast720p30fps.properties" KeyPath="yes" Vital="yes" />
+                        </Component>
+                        <Component Id="ultraFast1080p.properties" Guid="{0acc4829-4194-4aa4-acde-4afb5da49303}" NeverOverwrite="no" Permanent="no">
+                            <File Source="$(var.configSourcePath)\transcode\ultraFast1080p.properties" Id="ultraFast1080p.properties" KeyPath="yes" Vital="yes" />
+                        </Component>
+                    </Directory>
 				</Directory>
 			</Directory>
 		</Directory>
@@ -288,7 +302,11 @@
 			
 			<ComponentRef Id="CommonAppDataFolderDCT" />
 			<ComponentRef Id="configOpendct.properties" />
-			
+			<ComponentRef Id="profileExample.properties" />
+			<ComponentRef Id="ultraFast720p.properties" />
+			<ComponentRef Id="ultraFast720p30fps.properties" />
+			<ComponentRef Id="ultraFast1080p.properties" />
+
 			<!-- Generated fragment: jswDocComp_DCT.wxs -->
 			<ComponentGroupRef Id="jswDocComp_DCT" />
 			
