--- a/scripts/wix/Product.wxs
+++ b/scripts/wix/Product.wxs
@@ -151,7 +151,7 @@
 				</Component>
 
 				<!-- INSTALLDIR is a property name. We need it later for the UI (to be able to change the install dir. -->
-				<Directory Id="INSTALLDIR" Name="!(loc.ApplicationName)">					
+				<Directory Id="INSTALLDIR" Name="!(loc.ApplicationName)">
 					<Directory Id="jswDir" Name="jsw">
 						<Directory Id="jswBinDir" Name="bin">
 							<Component Id="jswWrapper.exe" Guid="{0acc4829-4194-4aa4-acde-4afb5da49294}" Win64="$(var.Win64)">
@@ -308,11 +308,15 @@
 			<ComponentRef Id="ultraFast720p30fps.properties" />
 			<ComponentRef Id="ultraFast1080p.properties" />
 
+            <!-- Generated fragment: rootComp_DCT.wxs -->
+            <ComponentGroupRef Id="rootComp_DCT" />
+
+			<!-- Generated fragment: binComp_DCT.wxs -->
+			<ComponentGroupRef Id="binComp_DCT" />
+
 			<!-- Generated fragment: jswDocComp_DCT.wxs -->
-			<ComponentGroupRef Id="jswDocComp_DCT" />
-			
-			<!-- Generated fragment: rootComp_DCT.wxs -->
-			<ComponentGroupRef Id="rootComp_DCT" />
+            <ComponentGroupRef Id="jswDocComp_DCT" />
+
         </Feature>
 
 	</Feature>
